static/styles.css
@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');



body {
    margin: 0;
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    font-style: normal;
    background-color: rgb(33, 33, 35);
    color: white;
    margin-left: 12vh;
}


.bottom_container {
    /* position: fixed; */
    background-color: rgb(50, 50, 54);
    padding-left: 2vh;
    padding-right: 2vh;
    height: 100%;
    position:fixed;
    top: 0;
    left: 0;
    display: grid;
    justify-content: center;
    box-sizing: border-box;
    gap: 20px;

}

.icon {
    display: grid;
    justify-content: center;
    align-items: center;

}

button {
    color: white;
    border-radius: 100px;
    padding: 14px;
    background-color: rgb(39, 114, 226);
    border: none;
    transition: background-color 0.3s;
    cursor: pointer;
}

button:hover {
    background-color: rgb(68, 130, 223);
}


.bigbubble {
  
    max-width: 75vh;
    max-height: auto;
    padding-bottom: 2%;
    display: inline-block;
    border-radius: 10px;
    padding-left: 2%;
    padding-right: 2%;
    background-color: rgb(50, 50, 54);
    /* transition: background-color 0.3s ease-in; */
    /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); */
  }

  h3 {
    font-weight: 400;
  }


  .iconhover {
    transition: scale 0.3s;

  }

  .iconhover:hover {
    scale: 1.2;
  }



  .slideshow-container {
      position: relative;
      max-width: 1000px;
      margin: auto;
      margin-top: 10vh;

  } 

  .mySlides {
      display: none;
  }

  img {
      vertical-align: middle;
  }

  .fade {
      animation-name: fade;
      animation-duration: 1.5s;
  }

  @keyframes fade {
      from {opacity: .4}
      to {opacity: 1}
  }

  .numbertext {
      color: #f2f2f2;
      font-size: 12px;
      padding: 8px 12px;
      position: absolute;
      top: 0;
  }

  .text {
      color: #f2f2f2;
      font-size: 15px;
      padding: 8px 12px;
      position: absolute;
      bottom: 8px;
      width: 100%;
      text-align: center;
  }

  .prev, .next {
      cursor: pointer;
      position: absolute;
      top: 50%;
      width: auto;
      margin-top: -22px;
      padding: 16px;
      color: white;
      font-weight: bold;
      font-size: 18px;
      transition: 0.6s ease;
      border-radius: 0 3px 3px 0;
      user-select: none;
  }

  .next {
      right: 0;
      border-radius: 3px 0 0 3px;
  }

  .prev:hover, .next:hover {
      background-color: rgba(0,0,0,0.8);
  }

  .dot {
      cursor: pointer;
      height: 15px;
      width: 15px;
      margin: 0 2px;
      background-color: #bbb;
      border-radius: 50%;
      display: inline-block;
      transition: background-color 0.6s ease;
      margin-bottom:5vh;
  }

  .active, .dot:hover {
      background-color: #717171;
  }

